Completed basic functionality

--- a/views/content/category.html
+++ b/views/content/category.html
@@ -7,7 +7,7 @@
     </div>
 -->
   <div class="banner-holder">
-    <img src="img/banners/acrylyte.png" alt="" class="img-responsive">
+    <img src="{{category.bannerImage}}" alt="" class="img-responsive">
   </div>
   <div class="categ-page">
     <div class="container">
@@ -281,17 +281,20 @@
                     </div> -->
             <div class="series">
               <div class="name">
-                <span class="category-color name">Acrylyte</span>
-                <span>8800 series</span>
+                <span class="category-color name">{{category.productName}}</span>
+                <!-- <span ></span> -->
+                <div ng-repeat="s in category.series">
+                <a ng-init="getSeries(category.series[0])" ng-click="getSeries(s)">{{s}}</a>
+                </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-4 col-sm-6 col-xs-6" ng-repeat="pros in panel" ng-click="open(pros);">
+              <div class="col-md-4 col-sm-6 col-xs-6" ng-repeat="pros in series" ng-click="open(pros);">
                 <div class="pro-list">
                   <a href="">
                     <div class="products">
                       <div class="pro-img">
-                        <img ng-src="{{pros.img}}" alt="Products" class="img-responsive">
+                        <img ng-src="{{pros.image}}" alt="Products" class="img-responsive">
                       </div>
                       <div class="pro-hov text-center text-uppercase">
                         <div class="pro-detail">
