--- a/views/content/quickview.html
+++ b/views/content/quickview.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="pop text-center">
             <div class="quick-img">
-                <img ng-src="{{showpop.img}}" noloading="true" alt="" class="img-responsive">
+                <img ng-src="{{showpop.image}}" noloading="true" alt="" class="img-responsive">
             </div>
             <div class="pro-descp">
               <div class="quick-info clearfix">
