--- a/views/footermenu.html
+++ b/views/footermenu.html
@@ -20,16 +20,20 @@
                     </address>
                     <ul class="social-icons">
                         <li>
-                            <a href="" class="fb"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/EuroPratik/" class="fb">
+                            <i class="fa fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="" class="twi"><i class="fa fa-twitter"></i></a>
+                            <a href="" class="twi">
+                            <i class="fa fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="" class="google"><i class="fa fa-google-plus"></i></a>
+                            <a href="https://plus.google.com/112483135471956488988/posts/1hesbVhAZoR" class="google">
+                            <i class="fa fa-google-plus"></i></a>
                         </li>
                         <li>
-                            <a href="" class="youtube"><i class="fa fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/channel/UCyN16tZpeqPBPeMBPvDmaAQ" class="youtube">
+                            <i class="fa fa-youtube"></i></a>
                         </li>
                         <li>
                             <a href="" class="insta"><i class="fa fa-instagram"></i></a>
@@ -43,8 +47,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul class="aboutus">
-                              <li><a href="#/">Know Us</a></li>
-                                <li><a href="#/categorymain">Categories</a></li>
+                              <li><a href="#/knowus">Know Us</a></li>
+                                <li><a href="#/products">Categories</a></li>
                                 <li><a href="#/gallery">Gallery</a></li>
                                 <li><a href="#/download">Download</a></li>
                                 <li><a href="#/contactus">Contact Us</a></li>
