--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -63,7 +63,7 @@ Vile Parle (East), Mumbai 400 057.Maharshtra, India</span>
             </div>
         </div>
     </div>
-    <div class="submit-btn text-center">
+    <div class="submit-btn text-center" ng-click="submit();">
         <a href="" class="submit button">Sumbit</a>
     </div>
 </div>
