--- a/views/content/galleryimage.html
+++ b/views/content/galleryimage.html
@@ -4,9 +4,9 @@
             <!--
                                           <img src="img/home-slide/slider1.png" alt="" class="img-responsive">-->
             <div class="rel">
-                <flex-slider class="carousel" flex-slide="s in gallery track by $index" animation="slide" animation-loop="true">
+                <flex-slider class="carousel" flex-slide="s in eachprogallery.img track by $index" animation="slide" animation-loop="true">
                     <li>
-                        <img ng-src="{{s.galleryImages}}" alt="Gallery Images" class="img-responsive">
+                        <img ng-src="{{s}}" alt="Gallery Images" class="img-responsive">
                     </li>
                 </flex-slider>
             </div>
