--- a/sass/main.scss
+++ b/sass/main.scss
@@ -950,6 +950,10 @@
        color: #F37351;
      }
  }
+ .features .feature-imgholder {
+    width: 70%;
+    margin: 0 auto;
+  }
  // @import 'mobile';
  @media (max-width: 1200px) {
      .navbar-nav li {
