Form validation added. new feature added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -953,6 +953,7 @@
  .features .feature-imgholder {
     width: 70%;
     margin: 0 auto;
+    img { margin: 0 auto; }
   }
  // @import 'mobile';
  @media (max-width: 1200px) {
