--- a/views/content/category.html
+++ b/views/content/category.html
@@ -288,7 +288,7 @@
                 </div>
               </div>
               <div class="name pull-right">
-                <a href="" class="category-name" ng-click="feature();">Features</a>
+                <a href="" class="category-color"  ng-click="feature();">Features</a>
               </div>
             </div>
             <div class="row">
