--- a/views/content/popup.html
+++ b/views/content/popup.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="pop load-pop">
       <img src="img/Lucento.jpg" alt="" class="img-responsive">
-          <div class="close" ng-click="closeThisDialog('value');"><i class="fa fa-times cross"></i></div>
+          <div class="close" ng-click="close(); closeThisDialog('value');"><i class="fa fa-times cross"></i></div>
     </div>
   </div>
 </div>
