--- a/views/content/products.html
+++ b/views/content/products.html
@@ -1,7 +1,7 @@
 <div class="container pdt10">
 	<div class="row">
 		<div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="catbrand in brands">
-			<a href="#/category/{{catbrand.id}}">
+			<a href="#/category/{{catbrand.id}}/series/{{catbrand.series[0]}}">
 				<div class="img-holder cathold">
 					<img ng-src=" {{catbrand.image}} " alt=" " class="img-responsive">
 				</div>
